tests/fixtures/syntax_rules/pos/utils/r003-generic-bucket.ts
// Positive fixture: module in generic bucket — triggers AGENT-TS-R003
export function formatString(s: string): string {
  return s.toLowerCase();
}
