tests/fixtures/syntax_rules/neg/r003-domain-dir.ts
/** Module in domain-named directory — does NOT trigger AGENT-TS-R003. */
export function parseConfig(cfg: string): Record<string, string> {
  return {};
}
